# ptera-cup-2025

./: README.md  ptera-cup-2025.code-workspace
.github/workflows/: actions.yml
app/backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/backend/k8s-manifests/: hackathon.yml
app/backend/src/: auth.py  db.py  models.py  schemas.py  time_line.py  timeline.py
app/backend/src/routers/: events.py  profile.py
app/backend/tests/: test_timeline.py
app/tool/presidio/: .gitignore  README.md  pyproject.toml
app/tool/presidio/docs/: AI_ARCHITECTURE.md
app/tool/presidio/src/: __init__.py  anonymizer.py  generator.py  main.py  processor.py  simulator.py
k8s-manifests/: backend-api.yaml  kustomization.yml
