[project]
name = "presidio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=39.0.0",
    "pandas>=2.3.3",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "ruff>=0.14.10",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "spacy>=3.8.11",
]
